--- a/package.json
+++ b/package.json
@@ -99,7 +99,9 @@
     "tailwindcss": "^3.4.17",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "bcryptjs": "^3.0.2",
+    "@types/bcryptjs": "^2.4.6"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.4.4",
